--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,21 @@
             </li>
         </ul>
     </header>
-    <div class="mainContent" id="ContactForm">
+    <div class="mainContent" id="ContactMe">
 
     <!--insert contact form code in here -->
+    <h2 class="ContactHeader" id="contact">Contact</h2>
+    <br>
+    <form class="ContactForm" id=formcontact>
+        First name <br>
+        <input  id="firstname" type="text" name="Firstname" value=""><br><br>
+        Last name <br>
+        <input  id="lastname" type="text" name="Lastname" value=""><br><br>
+        Message<br>
+        <textarea  id="FormMessage" name="Message" form="usrform" maxlenght="256"></textarea>
+        <br><br>
+        <input  id="submitButton" type="submit" value="Submit">
+    </form>
 
     </div>
     <div class="connect" id="indexConnect">
