--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
     <title>Cosmin Sofletea Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
