--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Cosmin Sofletea Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    
 </head>
 
 <body>
@@ -40,10 +41,10 @@
         <a href="https://github.com/Cozo97">
             <img src="assets/images/github.png" alt="GitHub" id="githubImage" class="connectImages" />
             </a>
-            <a href="linkedInAddressHere">
+            <a href="https://www.linkedin.com/in/cosmin-sofletea-740071139/">
                 <img src="assets/images/linkedin.png" alt="Linkedin" id="linkedinImage" class="connectImages" />
                 </a>
-                <a href="https://facebook.com/myLinkHere">
+                <a href="https://www.facebook.com/cosmin.sofletea.3">
                     <img src="assets/images/facebook.png" alt="Facebook" id="facebookImage" class="connectImages" />
                     </a>
     </div>
