--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width">
     <title>Cosmin Sofletea Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    
 </head>
 
 <body>
@@ -28,8 +29,28 @@
         </ul>
     </header>
     <div class="mainContent" id="Portfolio">
-
-        <!--insert the portfolio content inside here -->
+        <h2 class="contentHeader" id="portfolioHeader">Portfolio</h2>
+        <br>
+        <div class="game">
+        <img src="assets/images/hangman.jpeg" alt="Hangman" id="hangman">
+        <h2 class="imageText">Hangman</h2>
+        </div>
+        <div class="game">
+        <img src="assets/images/rpg.png" alt="RPG Game" id="rpg">
+        <h2 class="imageText">RPG Game</h2>
+        </div>
+        <div class="game">
+        <img src="assets/images/trivia.jpg" alt="Trivia Game" id="trivia">
+        <h2 class="imageText">Trivia Game</h2>
+        </div>
+        <div class="game">
+        <img src="assets/images/rutgersWidget.jpg" alt=" Rutgers Widget" id="rutgers">
+        <h2 class="imageText">Rutgers Widget</h2>
+        </div>
+        <div class="game">
+        <img src="assets/images/rps.jpg" alt=" Rock Paper Scissors" id="rps">
+        <h2 class="imagetext" id="rpsText">Rock Paper Scissors</h2>
+        </div>
 
     </div>
     <div class="connect" id="indexConnect">
