divs overlap when resize browser

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>Cosmin Sofletea Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    
 </head>
 
 <body>
-
     <header>
         <section id="name">
             <h2>Cosmin Sofletea</h2>
@@ -28,29 +26,30 @@
             </li>
         </ul>
     </header>
-    <div class="mainContent" id="bio">
-
-        <h2 class="contentHeader" id="aboutMe">About Me</h2>
-        <br>
-        <img src="assets/images/Headshot.jpg" alt="CosminSofletea" id="headshot" align="left"/>
-        <h3 id="aboutText">Born and raised in Queens, NY. I studies Computer Information Systems with a Web Development track at Devry College. I currently attend Rutgers Coding Camp and when I graduate I hope to get a job as a junior developer when I graduate. Im my free time I love working on cars and going snowboarding.</h3>
-        <br>
-    </div>
-    <div class="connect" id="indexConnect">
-        <h2 id="connectWithMe">Connect with me</h2>
-        <a href="https://github.com/Cozo97">
-            <img src="assets/images/github.png" alt="GitHub" id="githubImage" class="connectImages" />
+    <div id="wrapper">
+        <div class="mainContent" id="bio">
+            <h2 class="contentHeader" id="aboutMe">About Me</h2>
+            <br>
+            <img src="assets/images/Headshot.jpg" alt="CosminSofletea" id="headshot" align="left" />
+            <h3 id="aboutText">Born and raised in Queens, NY. I studies Computer Information Systems with a Web Development track at Devry College. I currently attend Rutgers Coding Camp and when I graduate I hope to get a job as a junior developer when I graduate. Im my free time I love working on cars and going snowboarding.</h3>
+            <br>
+        </div>
+        <div class="connect" id="indexConnect">
+            <h2 id="connectWithMe">Connect with me</h2>
+            <a href="https://github.com/Cozo97">
+                <img src="assets/images/github.png" alt="GitHub" id="githubImage" class="connectImages" />
             </a>
-            <a href="https://www.linkedin.com/in/cosmin-sofletea-740071139/">
+            <a href="https://www.linkedin.com/in/cdcosmin-sofletea-740071139/">
                 <img src="assets/images/linkedin.png" alt="Linkedin" id="linkedinImage" class="connectImages" />
-                </a>
-                <a href="https://www.facebook.com/cosmin.sofletea.3">
-                    <img src="assets/images/facebook.png" alt="Facebook" id="facebookImage" class="connectImages" />
-                    </a>
-    </div>
-    <footer id="indexFooter">
-        <h3 id="copyright">© Copyright 2017 Cosmin Sofletea</h3>
-    </footer>
+            </a>
+            <a href="https://www.facebook.com/cosmin.sofletea.3">
+                <img src="assets/images/facebook.png" alt="Facebook" id="facebookImage" class="connectImages" />
+            </a>
+        </div>
+    </div>    
+        <footer id="indexFooter">
+            <h3 id="copyright">© Copyright 2017 Cosmin Sofletea</h3>
+        </footer>
 </body>
 
 </html>
